--- a/src/components/CollectionItem/CollectionItem.css
+++ b/src/components/CollectionItem/CollectionItem.css
@@ -35,3 +35,15 @@
 .collection-item.hover .title {
   height: 130px;
 }
+
+@media only screen and (max-width: 1080px) {
+  .collection-item-image {
+    width: 400px;
+  }
+}
+
+@media only screen and (max-width: 880px) {
+  .collection-item-image {
+    width: 300px;
+  }
+}
