--- a/src/components/CategoryTabs/CategoryTabs.css
+++ b/src/components/CategoryTabs/CategoryTabs.css
@@ -31,3 +31,9 @@
   background-color: #665eff;
   border: 3px solid #3b3b7b;
 }
+
+@media only screen and (max-width: 679px) {
+  .tabs {
+    margin-left: 35%;
+  }
+}
