--- a/src/pages/detailspage/DetailsPage.css
+++ b/src/pages/detailspage/DetailsPage.css
@@ -35,3 +35,9 @@
 .react-player {
   margin: 10px 10% 0 10%;
 }
+
+@media only screen and (max-width: 679px) {
+  .details .details-overview {
+    margin-bottom: 50px;
+  }
+}
